--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "upstream"]
 	path = upstream
-	url = git://qt.gitorious.org/qt/qtxmlpatterns.git
+	url = https://git.merproject.org/mirror/qtxmlpatterns.git
